@@ -38,7 +38,7 @@ public enum AuthType {
     }
 
     public static AuthType getByString(String type) {
-        if (type == null || type.isBlank()) return null;
+        if (type == null || type.isEmpty()) return null;
         try {
             return AuthType.valueOf(type.toUpperCase());
         } catch (IllegalArgumentException e) {
@@ -50,9 +50,9 @@ public enum AuthType {
     public static AuthType getByList(List<String> types) {
         if (types == null || types.isEmpty()) return null;
         try {
-            List<AuthType> authTypeList = List.of(EMAIL, EMAIL_AND_PHONE_CODE, INCOMING_CALL, PHONE_CODE);
+            List<AuthType> authTypeList = Arrays.asList(EMAIL, EMAIL_AND_PHONE_CODE, INCOMING_CALL, PHONE_CODE);
             List<String> authTypes = new LinkedList<>();
-            authTypeList.stream().forEach(o -> authTypes.addAll(List.of(o.getRequiredActionNames())));
+            authTypeList.stream().forEach(o -> authTypes.addAll(Arrays.asList(o.getRequiredActionNames())));
             List<String> filterTypes = types.stream().filter(o -> authTypes.contains(o)).collect(Collectors.toList());
             return authTypeList.stream()
                     .filter(authType -> {
@@ -74,7 +74,7 @@ public enum AuthType {
         return requiredActionNames;
     }
 
-    public static List<String> REQUIRED_ACTIONS = List.of(
+    public static List<String> REQUIRED_ACTIONS = Arrays.asList(
             UserModel.RequiredAction.VERIFY_EMAIL.toString(),
             PhoneVerificationByIncomingCallFactory.PROVIDER_ID,
             PhoneVerificationBySmsFactory.PROVIDER_ID
