@@ -2,19 +2,24 @@ package ru.alamics.sso.keycloak.auth.post;
 
 import javassist.NotFoundException;
 import lombok.extern.slf4j.Slf4j;
+import org.jboss.resteasy.specimpl.MultivaluedMapImpl;
 import org.keycloak.authentication.AuthenticationFlowContext;
 import org.keycloak.authentication.Authenticator;
 import org.keycloak.forms.login.LoginFormsProvider;
 import org.keycloak.models.KeycloakSession;
 import org.keycloak.models.RealmModel;
 import org.keycloak.models.UserModel;
+import org.keycloak.sessions.AuthenticationSessionModel;
 import ru.alamics.sso.auth.UserRole;
 import ru.alamics.sso.keycloak.facade.CachedUserPostFacade;
 import ru.alamics.sso.registration.dto.UserPostResponse;
 
 import javax.naming.InitialContext;
 import javax.naming.NamingException;
+import javax.ws.rs.core.MultivaluedMap;
 import javax.ws.rs.core.Response;
+import javax.ws.rs.core.UriInfo;
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
@@ -41,18 +46,18 @@ public class AttributesForm implements Authenticator {
     @Override
     public void authenticate(AuthenticationFlowContext context) {
         final String DEBUG_STR = "authenticate";
-        var authSession = context.getAuthenticationSession();
+        AuthenticationSessionModel authSession = context.getAuthenticationSession();
         log.info("{}: frame={}", DEBUG_STR, authSession.getAuthNote(I_FRAME));
-        var uriInfo = context.getUriInfo();
-        var queryParams = uriInfo.getQueryParameters();
-        queryParams.forEach((key, value) -> log.info("{}: key={} value={}", DEBUG_STR, key, value));
+        UriInfo uriInfo = context.getUriInfo();
+        MultivaluedMap<String, String> queryParams = uriInfo.getQueryParameters();
+        queryParams.forEach((key, value) -> log.info("{}: key={} value={}", DEBUG_STR, key, value.toString()));
         String frame = uriInfo.getQueryParameters().getFirst(I_FRAME);
-        var redirectUriQueryParams = extractQueryParamsFromRedirectUri(queryParams.getFirst(REDIRECT_URI));
+        Map<String, String> redirectUriQueryParams = extractQueryParamsFromRedirectUri(queryParams.getFirst(REDIRECT_URI));
         String redirectIframe = redirectUriQueryParams.get(I_FRAME);
         boolean isAuth = "1".equals(authSession.getAuthNote(AUTH_FORM_SUCCESS));//it`s magick
 
         if (frame != null || isAuth || redirectIframe != null) {
-            var user = context.getUser();
+            UserModel user = context.getUser();
             List<UserPostResponse> attributes = null;
             try {
                 attributes = cachedUserPostFacade.findByUserId(user.getId());
@@ -97,7 +102,7 @@ public class AttributesForm implements Authenticator {
 
     @Override
     public void action(AuthenticationFlowContext context) {
-        var authSession = context.getAuthenticationSession();
+        AuthenticationSessionModel authSession = context.getAuthenticationSession();
         role.setUserPost(context);
         authSession.setAuthNote(AUTH_FORM_SUCCESS, "0");
         context.success();
@@ -130,8 +135,13 @@ public class AttributesForm implements Authenticator {
             String[] pairs = redirectUri.split("&");
             for (String pair : pairs) {
                 int idx = pair.indexOf('=');
-                if (idx >= 0)
-                    queryParameters.put(URLDecoder.decode(pair.substring(0, idx), StandardCharsets.UTF_8), URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8));
+                if (idx >= 0) {
+                    try {
+                        queryParameters.put(URLDecoder.decode(pair.substring(0, idx), StandardCharsets.UTF_8.name()), URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8.name()));
+                    } catch (UnsupportedEncodingException ignore) {
+
+                    }
+                }
             }
         }
         return queryParameters;
